infrastructure/services/agent_vms/builder_vm_templates.tf

// Fetch the contents of a cloud-config file from a GCS bucket
//data "local_file" "linux_ssh_agent_cloud_config" {
//  filename = "../../../UE-Jenkins-Images/ue-jenkins-agent-vms/linux-gce-cos/ue-jenkins-ssh-agent-vm-cloud-config.yaml"
//}

// Fetch the contents of a cloud-config file from a GCS bucket
data "http" "linux_ssh_agent_cloud_config" {
  url = var.linux_ssh_agent_cloud_config_url

  request_headers = {
      Authorization = "Bearer ${data.google_client_config.default.access_token}"
  }
}

resource "google_compute_instance_template" "linux_build_agent_template" {

    depends_on = [ var.module_depends_on ]

    for_each = var.linux_build_agent_templates

    name = each.key

    machine_type = each.value.machine_type

    // Add boot disk

    disk {
        source_image = var.linux_ssh_agent_image

        auto_delete = true
        boot = true

        disk_size_gb = each.value.boot_disk_size
        disk_type = "pd-ssd"
    }

    // Add persistent disk

    disk {
        auto_delete = true
        boot = false

        disk_size_gb = each.value.persistent_disk_size
        disk_type = "pd-ssd"
    }

    network_interface {

        network = google_compute_network.agent_vms.name
        subnetwork = google_compute_subnetwork.agent_vms.name

        access_config {

            // Auto-generate external IP

        }
    }

    service_account {
        email = google_service_account.agent_service_account.email
        scopes = [ "cloud-platform" ]
    }

    metadata = {
        google-logging-enabled = "true"
        //user-data = data.local_file.linux_ssh_agent_cloud_config.content
        user-data = data.http.linux_ssh_agent_cloud_config.body
    }
}
